--- a/fyd_shopping_app/pubspec.yaml
+++ b/fyd_shopping_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.2.0
   cloud_firestore: ^4.7.0
   image_picker: ^0.8.7+5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
